# midiMind

./: .gitignore  AUDIT_FRONTEND.md  CMakeLists.txt  FIXES_APPLIED.md  LICENSE.txt  README.md  REMAINING_FIXES_SUMMARY.md  TEST_PLAYBACK.md  VERIFICATION_ROUTING.md  blrlblelrlrl  compil error 1
backend/: CMakeLists.txt  struture Backend.txt
backend/config/: config.json  default_routes.json
backend/config/presets/: lead_synth.json
backend/data/: config.json
backend/data/migrations/: 001_initial.sql  005_instruments_latency.sql  006_midi_json_storage.sql  007_playlists.sql
backend/docs/: sysex-protocol-doc.md
backend/src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
backend/src/api/: ApiServer.cpp  ApiServer.h  CommandHandler.cpp  CommandHandler.h  CommandProcessorV2.cpp  CommandProcessorV2.h  MessageEnvelope.cpp  MessageEnvelope.h  Protocol.h  devices.cpp  instruments.cpp  routing.cpp
backend/src/api/commands/: devices.cpp  editor.cpp  files.cpp  instruments.cpp  logger.cpp  loops.cpp  network.cpp  playback.cpp  processing.cpp  routing.cpp  system.cpp
backend/src/api/editor/: EditorState.cpp  EditorState.h
backend/src/core/: Application.cpp  Application.h  Config.h  Error.h  ErrorManager.h  EventBus.cpp  EventBus.h  JsonValidator.cpp  JsonValidator.h  Logger.h  StringUtils.h  TimeUtils.h
backend/src/core/commands/: CommandFactory.h
backend/src/core/documentation/: CommandDocumentation.h
backend/src/core/interfaces/: ICommand.h
backend/src/core/optimisation/: LockFreeQueue.h  MemoryPool.cpp  MemoryPool.h  ObjectPool.h  PerformanceOptimizer.cpp  PerformanceOptimizer.h  ThreadPool.cpp
backend/src/core/storage/: Settings.cpp  Settings.h
backend/src/database/: schema.sql
backend/src/database/migrations/: 001_initial.sql  002_add_routing.sql  003_add_jsonmidi.sql  004_create_settings_table.sql
backend/src/events/: Events.h
backend/src/loop/: LoopManager.cpp  LoopManager.h
backend/src/midi/: JsonMidiConverter.cpp  JsonMidiConverter.h  MidiClock.cpp  MidiFileAnalyzer.h  MidiFileManager.cpp  MidiFileManager.h  MidiFileReader.cpp  MidiFileStructures.h  MidiFileWriter.cpp  MidiMessage.cpp  MidiMessage.h  MidiRouter.cpp  MidiRouter.h  MidiTransforms.cpp  MidiTransforms.h  MidiValidator.cpp  MidiValidator.h
backend/src/midi/devices/: BleMidi.h  BleMidiDevice.cpp  BleMidiDevice.h  DeviceInfo.h  DevicePlugin.h  MidiDevice.h  MidiDeviceManager.cpp  MidiDeviceManager.h  UsbDevicePlugin.h  UsbMidiDevice.cpp  UsbMidiDevice.h  VirtualMidiDevice.cpp  VirtualMidiDevice.h  WifiDevice.h
backend/src/midi/file/: MidiFileReader.cpp  MidiFileReader.h  MidiFileWriter.cpp  MidiFileWriter.h
backend/src/midi/player/: MidiFileLoader.h  MidiPlayer.cpp  MidiPlayer.h
backend/src/midi/plugins/: BleMidiPlugin.cpp  BleMidiPlugin.h
backend/src/midi/processing/: MidiProcessor.h  ProcessorChain.h  ProcessorManager.cpp  ProcessorManager.h
backend/src/midi/routing/: PriorityQueueScheduler.h
backend/src/midi/storage/: PresetManager.cpp  PresetManager.h
backend/src/midi/sysex/: AirCapabilities.h  CCCapabilities.h  CustomDeviceIdentity.h  CustomSysExParser.cpp  CustomSysExParser.h  CustomSysExProtocol.h  CustomSysExTypes.h  LightCapabilities.h  ManufacturerDatabase.h  MidiManufacturers.cpp  (+11 more)
backend/src/monitoring/: HealthCheck.h  MetricsCollector.cpp
backend/src/network/: BluetoothManager.cpp  BluetoothManager.h  NetworkManager.cpp  NetworkManager.h  WifiManager.cpp  WifiManager.h  networkmanager.cpp
backend/src/storage/: Database.cpp  Database.h  FileManager.cpp  FileManager.h  FileSystem.h  InstrumentDatabase.cpp  InstrumentDatabase.h  MidiDatabase.cpp  MidiDatabase.h  PathManager.cpp  PathManager.h  PlaylistManager.cpp  PlaylistManager.h  PresetManager.cpp  PresetManager.h  SessionManager.cpp  SessionManager.h  Settings.cpp  Settings.h
backend/src/timing/: InstrumentLatencyProfile.h  LatencyCompensator.cpp  LatencyCompensator.h  TimestampManager.cpp  TimestampManager.h
backend/src/utils/: JsonValidator.cpp  Preset.h
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/api/: ApiServer.cpp  ApiServer.h  CommandProcessorV2.h  JsonValidator.cpp  JsonValidator.h
src/api/observers/: IApiServerObserver.h
src/core/: Application.cpp  Application.h  Error.h  ErrorManager.h  IObserver.h  ISerializable.h  Logger.h  StringUtils.h  TimeUtils.h
src/core/commands/: BaseCommand.h  CommandFactory.h
src/core/documentation/: CommandDocumentation.h
src/core/interfaces/: ICommand.h.h
src/core/optimisation/: ThreadPool.h
src/core/patterns/: DIContainer.h  Subject.h
src/documentation/: CommandDocumentation.h
src/midi/: MidiClock.h  MidiFileAnalyzer.h  MidiFileManager.cpp  MidiFileManager.h  MidiFileReader.cpp  MidiFileReader.h  MidiFileWriter.cpp  MidiMessage.cpp  MidiMessage.h  MidiPlayer.h  MidiRouter.cpp  MidiRouter.h
src/midi/devices/: BleMidi.h  MidiDeviceManager.cpp  MidiDeviceManager.h  VirtualMidiDevice.cpp  VirtualMidiDevice.h  WifiDevice.h
src/midi/filemanager/: FileSystemScanner.h  MidiFileDatabase.h  PlaylistManager.h
src/midi/player/: MidiEventScheduler.h  MidiPlayer.h  MidiTrackManager.h  MidiTransportControl.h
src/midi/processing/: MidiProcessor.h  ProcessorManager.cpp  rocessorManager.h
src/midi/routing/: ISchedulingStrategy.h  RingBufferScheduler.h
src/midi/scheduling/: ISchedulingStrategy.h  PriorityQueueScheduler.h
src/midi/sysex/: DeviceIdentity.h  SysExBuilder.h  SysExHandler.cpp  SysExHandler.h  SysExParser.h
src/monitoring/: HealthCheck.cpp  LatencyMonitor.cpp  LatencyMonitor.h  MetricsCollector.h  PerformanceMetrics.h  SystemMonitor.cpp  SystemMonitor.h
src/network/: NetworkManager.h
src/network/bluetooth/: BleMidiDevice.cpp  BleMidiDevice.h
src/network/discovery/: MdnsDiscovery.cpp  MdnsDiscovery.h  ServiceInfo.h
src/network/rtpmidi/: RtpMidiServer.cpp  RtpMidiServer.h
src/network/wifi/: WiFiHotspot.cpp  WiFiHotspot.h
src/storage/: Database.cpp  Database.h  FileSystem.h  PathManager.h  SessionManager.cpp  SessionManager.h  Settings.cpp  Settings.h
src/utils/: ResourceMonitor.h
(+213 files in other folders)
